# docs/swagger.json
@@ -2909,6 +2909,9 @@
                 "id": {
                     "type": "integer"
                 },
+                "imageUrl": {
+                    "type": "string"
+                },
                 "label": {
                     "type": "string"
                 },
@@ -3195,6 +3198,9 @@
                 "label"
             ],
             "properties": {
+                "imageUrl": {
+                    "type": "string"
+                },
                 "label": {
                     "type": "string"
                 }
@@ -3337,6 +3343,9 @@
                 "tagGroupId"
             ],
             "properties": {
+                "imageUrl": {
+                    "type": "string"
+                },
                 "label": {
                     "type": "string"
                 },
